--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "mongoosastic": "^4.6.0",
     "mongoose": "^5.9.21",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-gyp": "^7.0.0",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
+    "sendotp": "^1.2.9",
     "stream": "0.0.2",
     "uuid": "^8.3.2"
   }
