--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-gyp": "^7.0.0",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.4",
+    "otp-generator": "^2.0.0",
     "path": "^0.12.7",
     "sendotp": "^1.2.9",
     "stream": "0.0.2",
